--- a/cocktaildb.html
+++ b/cocktaildb.html
@@ -34,7 +34,7 @@
             </div>
         </section>
         <section class="container-fluid">
-            <div id="cocktail-container" class="row row-cols-md-3 g-4">
+            <div id="cocktail-container" class="row row-cols-md-3 row-cols-1 g-4">
             </div>
         </section>
     </main>
