--- a/cocktaildb.html
+++ b/cocktaildb.html
@@ -29,7 +29,7 @@
     <main>
         <section class="container">
             <div class="row">
-                <div class="col-6 mx-auto" id="details-container">
+                <div class="col-12 col-md-6 mx-auto" id="details-container">
                 </div>
             </div>
         </section>
